fix: overflow

--- a/styles.scss
+++ b/styles.scss
@@ -15,15 +15,18 @@ $font_Averta: 'Averta', sans-serif;
 
 .page {
   background-color: $dark-bg-color;
-  max-width: 1680px;
   min-width: 320px;
   width: 100%;
   font-family: $font_Averta;
   font-weight: 400;
   color: $font-color;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  min-height: 320px;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.content {
+  position: relative;
 }
 
 .logo__image {
@@ -108,19 +111,17 @@ $font_Averta: 'Averta', sans-serif;
   }
 }
 
-.content {
-  width: 100vw;
-  position: relative;
-  height: 100vh;
-  display: flex;
-  align-content: center;
-}
-
 .hero {
   display: flex;
-  align-content: center;
   justify-content: center;
+  background-image: url('./img/Palladiumlab_background.svg');
+  background-repeat: no-repeat;
+  background-size: 1360px 548px;
+  background-position: center center;
+  height: 100vh;
+  overflow: hidden;
   width: 100%;
+  position: relative;
 
   &__container {
     display: flex;
@@ -136,6 +137,7 @@ $font_Averta: 'Averta', sans-serif;
     font-size: 60px;
     line-height: 1.16;
     max-width: 732px;
+    margin-top: 25px;
     margin-bottom: 40px;
     text-align: center;
   }
@@ -156,6 +158,7 @@ $font_Averta: 'Averta', sans-serif;
     line-height: 1.33;
     list-style: none;
     display: flex;
+    opacity: $font-opacity;
   }
 
   &__service-item {
@@ -166,9 +169,8 @@ $font_Averta: 'Averta', sans-serif;
       position: absolute;
       width: 6px;
       height: 6px;
-      right: 0;
-      left: 4px;
       bottom: 8px;
+      right: -8px;
       border-radius: 50%;
       background-color: $font-color;
     }
@@ -178,3 +180,50 @@ $font_Averta: 'Averta', sans-serif;
     padding-left: 24px;
   }
 }
+
+.main-container {
+  width: 100%;
+  padding-left: 270px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.skills {
+  width: 100%;
+
+  &__container {
+    margin-top: 47px;
+    display: flex;
+    flex-direction: column;
+    width: 1110px;
+  }
+
+  &__description {
+    font-family: $font_Averta;
+    font-weight: 700;
+    line-height: 1.16;
+    font-size: 48px;
+    margin: 45px 0;
+  }
+
+  &__title {
+    font-family: $font_Averta;
+    font-weight: 700;
+    line-height: 1.5;
+    font-size: 12px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    opacity: $font-opacity;
+  }
+}
+
+
+.curly-link {
+  text-transform: uppercase;
+  font-family: $font_Averta;
+  font-weight: 700;
+  line-height: 1.5;
+  font-size: 12px;
+  letter-spacing: 3px;
+}
+
